--- a/styles/index.css
+++ b/styles/index.css
@@ -1,37 +1,43 @@
-.desktop-1,
-.desktop-1 * {
+html {
+  background: var(--soft, #e1ecd5);
+  scrollbar-width: none; 
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+main,
+main * {
   box-sizing: border-box;
 }
-.desktop-1 {
-  background: var(--soft, #e1ecd5);
+main {
   display: flex;
   flex-direction: column;
   gap: 0px;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
-  overflow-y: auto;
 }
 .menu {
-  padding: 19px 30px 19px 30px;
+  padding: 19px 50px 19px 30px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   align-self: stretch;
   flex-shrink: 0;
-  height: 135px;
-  position: relative;
-  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 .avrojo {
   color: var(--marron, #442d1b);
   text-align: center;
-  font-family: var(--title-hero-font-family, "Inter-Bold", sans-serif);
-  font-size: var(--title-hero-font-size, 72px);
-  line-height: var(--title-hero-line-height, 120%);
-  letter-spacing: var(--title-hero-letter-spacing, -0.03em);
-  font-weight: var(--title-hero-font-weight, 700);
+  font-size: 48px;
+  line-height: 120%;
+  letter-spacing: -0.03em;
+  font-weight: 700;
   position: relative;
 }
 .frame-1 {
@@ -84,16 +90,14 @@
   width: 32px;
   height: 32px;
   position: relative;
-  overflow: visible;
 }
 .linkedin {
   flex-shrink: 0;
   width: 32px;
   height: 32px;
   position: relative;
-  overflow: visible;
 }
-.presentaci-n {
+.presentacion {
   padding: 52px 115px 52px 115px;
   display: flex;
   flex-direction: column;
@@ -102,7 +106,7 @@
   justify-content: center;
   align-self: stretch;
   flex-shrink: 0;
-  height: 424px;
+  height: 90vh;
   position: relative;
 }
 .nombre {
@@ -119,7 +123,6 @@
 .hola {
   color: #000000;
   text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
   font-size: var(--heading-font-size, 24px);
   line-height: var(--heading-line-height, 120%);
   letter-spacing: var(--heading-letter-spacing, -0.02em);
@@ -127,14 +130,18 @@
   position: relative;
 }
 .alicia-valera {
-  color: var(--pop, #e6730f);
   text-align: center;
-  font-family: var(--title-hero-font-family, "Inter-Bold", sans-serif);
-  font-size: var(--title-hero-font-size, 72px);
-  line-height: var(--title-hero-line-height, 120%);
-  letter-spacing: var(--title-hero-letter-spacing, -0.03em);
-  font-weight: var(--title-hero-font-weight, 700);
+  font-size: 72px;
+  line-height: 120%;
+  letter-spacing: -0.03em;
+  font-weight: 700;
   position: relative;
+  background-color: #9f4c03;
+  color: transparent;
+  text-shadow: 0px 2px 2px var(--pop, #e6730f);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
 }
 .desarrolladora-web-basada-en-madrid {
   color: var(--marron, #000000);
@@ -156,7 +163,6 @@
   align-self: stretch;
   flex-shrink: 0;
   position: relative;
-  overflow: hidden;
 }
 .descripci-n {
   display: flex;
@@ -276,7 +282,6 @@
   width: 20px;
   height: 20px;
   position: relative;
-  overflow: visible;
 }
 .proyectos2 {
   padding: 76px 200px 76px 200px;
@@ -288,7 +293,6 @@
   align-self: stretch;
   flex-shrink: 0;
   position: relative;
-  overflow: hidden;
 }
 .proyectos-destacados {
   color: var(--marron, #442d1b);
@@ -312,7 +316,6 @@
   flex-shrink: 0;
   height: 880px;
   position: relative;
-  overflow: hidden;
 }
 .t-tulo {
   display: flex;
@@ -405,7 +408,6 @@
   flex-shrink: 0;
   min-width: 240px;
   position: relative;
-  overflow: hidden;
 }
 .value {
   color: var(--var-sds-color-text-default-tertiary, #b3b3b3);
@@ -450,7 +452,6 @@
   min-width: 240px;
   min-height: 80px;
   position: relative;
-  overflow: hidden;
 }
 .value2 {
   color: var(--var-sds-color-text-default-tertiary, #b3b3b3);
@@ -469,7 +470,6 @@
   position: absolute;
   right: 5.02px;
   bottom: 6.02px;
-  overflow: visible;
 }
 .button-group {
   display: flex;
@@ -495,7 +495,6 @@
   justify-content: center;
   flex: 1;
   position: relative;
-  overflow: hidden;
 }
 .button2 {
   color: var(--var-sds-color-text-brand-on-brand, #f5f5f5);
@@ -522,7 +521,6 @@
   flex-shrink: 0;
   height: 181px;
   position: relative;
-  overflow: hidden;
 }
 .frame-13 {
   display: flex;
@@ -562,3 +560,4 @@
   font-weight: var(--body-base-font-weight, 400);
   position: relative;
 }
+
