--- a/styles/index.css
+++ b/styles/index.css
@@ -1,20 +1,20 @@
 html {
   background: var(--soft, #e1ecd5);
-  scrollbar-width: none; 
+  scrollbar-width: none;
 }
 
 html::-webkit-scrollbar {
   display: none;
 }
 
-#move{
-    background: radial-gradient(circle 50px,#bedc9e, #e1ecd5);
-    height: 300px;
-    aspect-ratio: 1;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    position: fixed;
+#move {
+  background: radial-gradient(circle 100px, #cbe5af, #e1ecd5);
+  height: 500px;
+  aspect-ratio: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
 }
 
 main,
@@ -570,4 +570,3 @@ main {
   font-weight: var(--body-base-font-weight, 400);
   position: relative;
 }
-
