--- a/styles/index.css
+++ b/styles/index.css
@@ -166,6 +166,7 @@ a {
   position: relative;
   flex-wrap: wrap;
 }
+
 .descripcion {
   display: flex;
   flex-direction: column;
@@ -173,10 +174,11 @@ a {
   align-items: center;
   justify-content: flex-start;
   flex-shrink: 0;
-  width: 1032px;
+  width: 100%;
   position: relative;
   text-align: center;
 }
+
 .lista {
   display: flex;
   flex-direction: column;
@@ -184,13 +186,14 @@ a {
   align-items: center;
   justify-content: flex-start;
   height: 198px;
+  max-width: 80vw;
   position: relative;
 }
 
 .cosas {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .cosas li{
@@ -232,6 +235,47 @@ background-color: rgba(79, 135, 85, 0.7);
   position: relative;
 }
 
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 30%;
+  height: 300px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 70%;
+  border-left: none;
+  height: 300px;
+}
 
 /* Contacto */
 #contacto {
@@ -291,14 +335,15 @@ background-color: rgba(79, 135, 85, 0.7);
   padding: 10px;
   border: none;
   border-radius: 5px;
-  background-color: var(--pop, #e6730f);
+  background-color: #8d4200;
   color: rgb(252, 245, 245);
   font-weight: 600;
   cursor: pointer;
 }
 
 #contacto button:hover{
-  background-color: #ff7f16;
+  /* background-color: var(--marron, #442d1b); */
+  background-color: var(--pop, #f78929);
   transition: background-color 0.3s ease;
 }
 
