--- a/styles/index.css
+++ b/styles/index.css
@@ -224,26 +224,30 @@ background-color: rgba(79, 135, 85, 0.7);
 
 /* proyectos! */
 #proyectos {
-  padding: 100px 200px 76px 200px;
+  padding: 150px 200px 100px 200px;
   display: flex;
   flex-direction: column;
   gap: 50px;
   align-items: center;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
+  width: 100%;
+  justify-content: center;
   position: relative;
 }
 
-.tab {
-  float: left;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  width: 30%;
-  height: 300px;
+.pestanas{
+  display: flex;
+  flex-direction: row;
+  gap: 0px;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+  max-width: 60vw;
 }
 
-/* Style the buttons that are used to open the tab content */
+.tab {
+  width: 30vw;
+}
+
 .tab button {
   display: block;
   background-color: inherit;
@@ -257,24 +261,25 @@ background-color: rgba(79, 135, 85, 0.7);
   transition: 0.3s;
 }
 
-/* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+  background-color: #f7a257;
 }
 
-/* Create an active/current "tab button" class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: var(--pop, #e6730f);
 }
 
-/* Style the tab content */
 .tabcontent {
   float: left;
-  padding: 0px 12px;
-  border: 1px solid #ccc;
-  width: 70%;
+  padding: 20px;
+  width: 60vw;
   border-left: none;
-  height: 300px;
+}
+
+.img-proyectos{
+  max-width: 30vw;
+  box-shadow: 0 0 30px var(--pop, #e6730f);
+  margin: 30px;
 }
 
 /* Contacto */
